# cakung-barat-server

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  README.md  README_SUPABASE_MIGRATION.md  Taskfile.yml  dockerfile  supabase_schema.sql  supabase_seed.sql
.sqlx/: query-01b0d4d1288e2f491abae5bd4ebb1c7c29dc814616603ed39921d32692edbfae.json  query-1dcad9685aa04de65e87f79d7cabea0d00dc47e2a388e56fee3d064644d41cfc.json  query-23dbbbb91455072bfebeef18681020bbbccbc29168ea589b3ad800a2f5b3d0b8.json  query-289cfecd7444b946520cae07701f3c17d944e7e772a9825b00a887437dc4ab24.json  query-368af938e9c69925b4b7b598b90856377d56976051e0223be32f118ea163790e.json  query-55c15951def0ecc96690bae1c5098645f2d6c0161efbb554ac3a073a49fbea63.json  query-60ffcdd5a7c77213e766dfd1a351200a73b6e580a6abf7f788ccfcc4192684b9.json  query-62ef620452d3192b80fcd9483528fc5815500679af06768e70eabfcabc017a3f.json  query-69dd008897ab37163e8185b69cc65673840501a3bed74e589ab7a7514fdac24b.json  query-6b65cc053dacedb14f96526992143ff429cbef7bc71a876ccd277e8efce77d71.json  query-700bda2a69942a559d75476859766cdf97740857141bd74c108fd4ca459418f7.json  query-80242a55330070a9ede5aa97946a3bbec9b18b9ea113b7a1cc1dd77afb2a7aae.json  query-834a48554bc7989975b42afbc40d0128865826a7cc6130441c42e75b46c54dc9.json  query-98c5a728ec337054f11a60d1e0fca5432c5c1b97f585de164e37fd152741833e.json  query-9ddf3c7cf1b8307bf48f9c3cc5852158347df73aa3fdc261ffad06014231582f.json  query-a24f9d0c48a67cd6cd9e53b869a77d43b6974cf5598ccb4738f0e0de87a7429a.json  query-b6cf835857a640c132ef9930a1ca46bcc9957f9ab686070c7faff339f8784b88.json  query-b9b5a8b4d8176dfdec605bbb6f020dbcb1bf57c31f05eed41fa6a9f363fd51a1.json  query-bb3902811381fe1ce3fc3c475b198b3c5ec15a762454159111e3c3dff676d04c.json  query-bdb2fd1069e79818477dc2264dc062d62cd0d84741612be7e08a6c96be747c16.json  query-e826c500feb25de6054ba83e4b66518a57297605129cabdda8dce2b0ce30578b.json  query-ea99047fc2293f15b28d56e38eb4f028eb91d3af0cc2506e723e584753640c85.json
src/: db.rs  db_tests.rs  handlers.rs  integration_tests.rs  lib.rs  main.rs  models.rs  schema.rs  storage.rs  storage_tests.rs
src/asset/: handlers.rs  mod_tests.rs  models.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  model.rs  tests.rs
src/db/: admin.rs  asset.rs  mod.rs  posting.rs
src/mcp/: handlers.rs  mod.rs  rpc.rs  service.rs
src/mcp/content/: builder.rs  file.rs  mod.rs  types.rs
src/mcp/generators/: common.rs  engine.rs  mod.rs  surat_kpr.rs  surat_nib_npwp.rs  surat_tidak_mampu.rs  traits.rs  validation.rs
src/mcp/tools/: browse_posts.rs  mod.rs  organization.rs  registry.rs  surat_kpr.rs  surat_nib_npwp.rs  surat_tidak_mampu.rs
src/organization/: mod.rs  model.rs  persistence.rs  routes.rs  tests.rs
src/posting/: handlers.rs  mod.rs  mod_tests.rs  models.rs  multipart_parser.rs
static/: keterangan_tidak_mampu.typ  kpr_belum_memiliki_rumah.typ  surat_pernyataan_akan_mengurus_nib_npwp.typ
tests/: api_integration_tests.rs  asset_handler_tests.rs  common.rs  database_integration_tests.rs  database_tests.rs  error_handling_tests.rs  lib.rs  mcp_content_tests.rs  mcp_generators_common_tests.rs  mcp_generators_tests.rs  mcp_sse_tests.rs  mcp_validation_tests.rs  model_tests.rs  multipart_parser_tests.rs  organization_cache_tests.rs  organization_integration.rs  organization_persistence_tests.rs  organization_unit_tests.rs  posting_handler_tests.rs  storage_tests.rs
tests/api/: api_tests.rs
tests/unit/: comprehensive_posting_tests.rs  db_tests.rs  model_tests.rs  posting_endpoint_tests.rs  posting_handler_tests.rs
