[package]
name = "cakung-barat-server"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
utoipa = { version = "^4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "^4", features = ["actix-web"] }
parking_lot = "0.12"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
actix-multipart = "0.6"
sanitize-filename = "0.5.0"
futures-util = "0.3"
actix-files = "0.6"
actix-cors = "0.6"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
postgrest = "1.6.0"
supabase_rs = "0.1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
openssl-probe = "0.1.5"
