[package]
name = "cakung-barat-server"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
utoipa = { version = "^4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "^4", features = ["actix-web"] }
parking_lot = "0.12"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
actix-multipart = "0.6"
sanitize-filename = "0.5.0"
futures-util = "0.3"
actix-files = "0.6"
actix-cors = "0.6"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
postgrest = "1.6.0"
supabase_rs = "0.1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
moka = { version = "0.12.1", features = ["future"] }
tempfile = "3.0"
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
