[package]
name = "cakung-barat-server"
version = "0.5.0"
edition = "2021"

[dependencies]
actix-web = "4.12.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
parking_lot = "0.12"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"
futures-util = "0.3"
actix-files = "0.6"
actix-cors = "0.7.1"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
postgrest = "1.6.0"
supabase_rs = "0.5.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
mime_guess = "2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json","macros"] }
moka = { version = "0.12.1", features = ["future"] }
tempfile = "3.0"
tokio-util = { version = "0.7", features = ["codec"] }
prometheus = "0.14.0"
actix-web-prometheus = "0.1"
lazy_static = "1.4.0"
thiserror = "1.0"
async-trait = "0.1"
jsonwebtoken = "9"
bcrypt = "0.17"
base64 = "0.22"
regex = "1.10"
tokio-stream = { version = "0.1", features = ["sync"] }

[lib]
name = "cakung_barat_server"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
